fix(ui): Fix avatar overlap in thread participants

--- a/webapp/channels/src/components/widgets/users/avatars/avatars.scss
+++ b/webapp/channels/src/components/widgets/users/avatars/avatars.scss
@@ -47,27 +47,25 @@
         --border-width: 1px;
     }
 
-    > button {
+    > * {
         transition: all 100ms ease-in-out;
 
         &:not(:first-child) {
             margin-left: var(--offset);
         }
 
-        &:hover,
-        &:focus {
-            z-index: 1;
-            box-shadow: var(--elevation-2);
-            transform: scale(1.2);
+        &:not(.Avatar-plain) {
+            &:hover,
+            &:focus {
+                z-index: 1;
+                box-shadow: var(--elevation-2);
+                transform: scale(1.2);
+            }
         }
     }
 
     .Avatar {
         border: var(--border-width) solid rgba(var(--center-channel-bg-rgb), 1);
-
-        &:not(:first-child) {
-            margin-left: var(--offset);
-        }
 
         &:hover,
         &:focus {
